# cryptogoblin

./: .gitignore  README.md  pyproject.toml  pytest.ini
set_1/: test_set_1.py
set_2/: test_set_2.py
src/: cryptogoblin.py
