[build-system]
requires = ["setuptools >= 77.0.3", "pytest"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptogoblin"
version = "0.0.1"
authors = [
  { name="Gabriele Ricciardi" },
]
description = "My cryptopals' challenges solutions."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools]
package-dir = {"" = "src"}